updated documentation to show new way to register menu items

--- a/burp.ini
+++ b/burp.ini
@@ -1,6 +1,17 @@
 [menus]
+; specify the module and class name you want enabled here
+;
+; ex.
+; module.containing.menus.YourMenuItem = enabled
+;
+; or you can specify a wildcard to register all classes within
+; a module that implements the IMenuItemHandler interface.
+;
+; ex.
+; module.containing.menus.* = enabled
+;
 gds.burp.menu.console.ConsoleMenu = enabled
 
 [plugins]
-repeater.request =
-repeater.response =
+repeater.request = 
+repeater.response = 
