Add json fuzzer menu

--- a/burp.ini
+++ b/burp.ini
@@ -32,6 +32,7 @@
 ; module.containing.menus.* = enabled
 ;
 gds.burp.menu.console.ConsoleMenu = enabled
+gds.burpext.jsonmenu.* = enabled
 
 [handlers]
 ; specify the plugin classes you want enabled for each tool
