move burpext into its own repository and keep as submodule here

--- a/burp.ini
+++ b/burp.ini
@@ -32,7 +32,9 @@
 ; module.containing.menus.* = enabled
 ;
 gds.burp.menu.console.ConsoleMenu = enabled
-gds.burpext.jsonmenu.* = enabled
+
+; to enable the following, you must init the burp-extensions submodule
+;gds.burpext.jsonmenu.* = enabled
 
 [handlers]
 ; specify the plugin classes you want enabled for each tool
