retrying this whole submodule thing

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "burp-extensions"]
+[submodule "Lib/gds/burpext"]
 	path = Lib/gds/burpext
 	url = git://github.com/mwielgoszewski/jython-burp-extensions.git
